--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -268,6 +268,7 @@
     }
     .form-registration {
         width: 100%;
+        margin-top: 45px;
         @include respond-to($lg) {
             position: relative;
             width: 43%;
