--- a/assets/scss/components/countdown.scss
+++ b/assets/scss/components/countdown.scss
@@ -6,6 +6,9 @@
     border: 2px solid $secondary-color;
     border-radius: 10px;
     padding: 25px 10px 20px;
+    @media all and (orientation:landscape) {
+        padding: 10px;
+    }
     @include respond-to($lg) {
         padding: 5px 80px 20px;
     }
