--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -26,10 +26,15 @@
         height: 45px;
         border-radius: 50%;
         background: $primary-color;
+
     }
 .fa {
     color: $secondary-color;
     font-size: 30px;
+    &:hover,
+    &:focus {
+        color: #000;
+    }
 }
 
 }
