--- a/assets/scss/components/home/section-banner.scss
+++ b/assets/scss/components/home/section-banner.scss
@@ -62,9 +62,11 @@
             }
             @include respond-to($lg) {
                 padding-bottom: 40px;
+                padding-left: 7%;
             }
             @include respond-to($xl) {
                 padding-bottom: 50px;
+                padding-left: 0;
             }
         }
 
