--- a/assets/scss/components/home/section-banner.scss
+++ b/assets/scss/components/home/section-banner.scss
@@ -62,7 +62,7 @@
             }
             @include respond-to($lg) {
                 padding-bottom: 40px;
-                padding-left: 7%;
+                padding-left: 0;
             }
             @include respond-to($xl) {
                 padding-bottom: 50px;
